--- a/Project/Subscriber/Confirm.html
+++ b/Project/Subscriber/Confirm.html
@@ -25,7 +25,7 @@
         }
         .confirmation-card i {
             font-size: 55px;
-            color: #dc3545; /* Bootstrap Danger Color */
+            color: #34495e; /* Updated from Bootstrap Danger Color */
         }
         .footer {
             text-align: center;
@@ -39,50 +39,44 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger py-1">
+<nav class="navbar  navbar-dark py-0" style="background-color: #34495e;">
     <div class="container">
-        <a class="navbar-brand fs-6" href="#">Mobicom</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
+        <a class="navbar-brand " href="#">Mobicom</a>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link text-white px-2 py-1" href="#plans">Plans</a></li>
-                <li class="nav-item"><a class="nav-link text-white px-2 py-1" href="#contact">Contact</a></li>
-                <li class="nav-item"><a class="nav-link text-white px-2 py-1" href="#services">Services</a></li>
-                <li class="nav-item"><a class="nav-link text-white px-2 py-1" href="#mobile-validation">Login</a></li>
-                <li class="nav-item">
-                    <a class="nav-link text-white px-2 py-1" href="profile.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="View Profile">
-                        <i class="bi bi-person-fill"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
+       
     </div>
 </nav>
 
-
-
-    <!-- Payment Confirmation -->
-    <div class="container">
-        <div class="confirmation-card">
-            <i class="bi bi-check-circle-fill"></i>
-            <h2 class="mt-3 text-danger">Payment Successful!</h2>
-            <p class="text-muted">Your payment of <strong>₹365</strong> has been processed successfully.</p>
-            <p class="fw-bold">Transaction ID: <span id="txn-id">Loading...</span></p>
-            <a href="mobicom.html" class="btn btn-danger mt-3">Back to Home</a>
-        </div>
+<!-- Payment Confirmation -->
+<div class="container">
+    <div class="confirmation-card">
+        <i class="bi bi-check-circle-fill"></i>
+        <h2 class="mt-3" style="color: #34495e;">Payment Successful!</h2>
+        <p class="text-muted">Your payment of <strong>₹<span id="total-paid">0</span></strong> has been processed successfully.</p>
+        <p class="fw-bold">Transaction ID: <span id="txn-id">Loading...</span></p>
+        <p class="fw-bold">Plan Purchased: <span id="plan-name">Loading...</span></p>
+        <a href="index.html" class="btn btn-custom mt-3">Back to Home</a>
     </div>
+</div>
 
-    <!-- Footer -->
-    <div class="footer">
-        <p>&copy; 2025 Mobicom. All Rights Reserved.</p>
-    </div>
 
-    <script>
-        // Simulating dynamic transaction ID generation
-        document.getElementById("txn-id").innerText = "#TXN" + Math.floor(Math.random() * 900000000 + 100000000);
-    </script>
+<!-- Footer -->
+<div class="footer">
+    <p>&copy; 2025 Mobicom. All Rights Reserved.</p>
+</div>
+
+<script>
+    // Simulating dynamic transaction ID generation
+    document.getElementById("txn-id").innerText = "#TXN" + Math.floor(Math.random() * 900000000 + 100000000);
+    document.addEventListener("DOMContentLoaded", function () {
+        let paymentData = JSON.parse(localStorage.getItem("paymentDetails"));
+        if (paymentData) {
+            document.getElementById("total-paid").innerText = paymentData.totalPayable;
+            document.getElementById("txn-id").innerText = paymentData.transactionID;
+            document.getElementById("plan-name").innerText = paymentData.planName;
+        }
+    });
+</script>
 
 </body>
 </html>
