apply site-wide color palette to modals

--- a/Admin/Transaction.html
+++ b/Admin/Transaction.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
         body {
             display: flex;
@@ -50,19 +52,21 @@
             font-weight: bold;
         }
     </style>
+    
 </head>
 <body>
     <!-- Sidebar -->
     <div class="sidebar">
         <h2>Admin Panel</h2>
         <ul>
-            <li><a href="Dashboard.html">Dashboard</a></li>
-            <li><a href="Plan.html">Plan Management</a></li>
-            <li><a href="users.html">Users Management</a></li>
-            <li><a href="Transaction.html">Transaction History</a></li>
-            <li><a href="ad">Logout</a></li>
+            <li><a href="Dashboard.html"><i class="fas fa-tachometer-alt"></i>   Dashboard</a></li>
+            <li><a href="Plans.html"><i class="fas fa-list"></i>   Plan Management</a></li>
+            <li><a href="users.html"><i class="fas fa-users"></i> Users Management</a></li>
+            <li><a href="Transaction.html"><i class="fas fa-receipt"></i> Transaction History</a></li>
+            <li><a href="adlog.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </div>
+    
 
     <!-- Main Content -->
     <div class="content">
