--- a/Admin/Dashboard.html
+++ b/Admin/Dashboard.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -71,11 +73,11 @@
     <div class="sidebar">
         <h2>Admin Panel</h2>
         <ul>
-            <li><a href="Dashboard.html">Dashboard</a></li>
-            <li><a href="Plan.html">Plan Management</a></li>
-            <li><a href="users.html">Users Management</a></li>
-            <li><a href="Transaction.html">Transaction History</a></li>
-            <li><a href="adlog.html">Logout</a></li>
+            <li><a href="Dashboard.html"><i class="fas fa-tachometer-alt"></i>   Dashboard</a></li>
+            <li><a href="Plans.html"><i class="fas fa-list"></i>   Plan Management</a></li>
+            <li><a href="users.html"><i class="fas fa-users"></i> Users Management</a></li>
+            <li><a href="Transaction.html"><i class="fas fa-receipt"></i> Transaction History</a></li>
+            <li><a href="adlog.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </div>
    
@@ -200,7 +202,9 @@
                         <td>${user.email}</td>
                         <td>${user.expiry_date}</td>
                         <td>
-                            <button class="btn btn-warning btn-sm notify" data-phone="${user.phone}">Notify</button>
+                            <button class="btn btn-warning btn-sm notify onclick="notify('9876543210')">Notify</button>
+
+
                         </td>
                     </tr>
                 `;
@@ -210,10 +214,20 @@
             document.getElementById("pageNumber").textContent = `Page ${currentPage}`;
         }
 
-        function notifyUser(event) {
-            const phone = event.target.dataset.phone;
-            alert(`Notification sent to user with phone: ${phone}`);
+        function notify(phoneNumber) {
+            const message = "Your plan is about to expire soon!";
+            fetch('http://localhost:8080/notify/sms', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: `phone=${phoneNumber}&message=${encodeURIComponent(message)}`
+            })
+            .then(response => response.text())
+            .then(data => alert(data))
+            .catch(error => console.error('Error:', error));
         }
+        
 
         document.getElementById("prevPage").addEventListener("click", function () {
             if (currentPage > 1) {
